--- a/ProjetoCursoFeriasSMN/ProjetoCursoFeriasSMN.Web.csproj
+++ b/ProjetoCursoFeriasSMN/ProjetoCursoFeriasSMN.Web.csproj
@@ -119,8 +119,12 @@
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
+    <Content Include="Lib\Css\Geral.css" />
     <Content Include="Lib\Css\Index.css" />
     <Content Include="Lib\Css\materialize.min.css" />
+    <Content Include="Lib\Images\smnicon.png" />
+    <Content Include="Lib\Images\smnicon.svg" />
+    <Content Include="Lib\Images\smnwallpaper.png" />
     <Content Include="Lib\Javascript\materialize.min.js" />
     <Content Include="Web.config" />
   </ItemGroup>
@@ -164,7 +168,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Lib\Images\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ProjetoCursoFeriasSMN.Web.Application\ProjetoCursoFeriasSMN.Web.Application.csproj">
