--- a/ProjetoCursoFeriasSMN.Domain/ProjetoCursoFeriasSMN.Domain.csproj
+++ b/ProjetoCursoFeriasSMN.Domain/ProjetoCursoFeriasSMN.Domain.csproj
@@ -42,6 +42,9 @@
   <ItemGroup>
     <Compile Include="Entidades\Cliente.cs" />
     <Compile Include="Entidades\Endereco.cs" />
+    <Compile Include="Entidades\Itens.cs" />
+    <Compile Include="Entidades\Produto.cs" />
+    <Compile Include="Entidades\Venda.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
