--- a/ProjetoCursoFeriasSMN.Repository/ProjetoCursoFeriasSMN.Repository.csproj
+++ b/ProjetoCursoFeriasSMN.Repository/ProjetoCursoFeriasSMN.Repository.csproj
@@ -46,6 +46,8 @@
     <Compile Include="DataBase\SQLExtension.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\ClienteRepository.cs" />
+    <Compile Include="Repositories\ProdutoRepository.cs" />
+    <Compile Include="Repositories\VendaRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ProjetoCursoFeriasSMN.Domain\ProjetoCursoFeriasSMN.Domain.csproj">
