--- a/ProjetoCursoFeriasSMN.Web.Application/ProjetoCursoFeriasSMN.Web.Application.csproj
+++ b/ProjetoCursoFeriasSMN.Web.Application/ProjetoCursoFeriasSMN.Web.Application.csproj
@@ -51,6 +51,7 @@
     <Compile Include="ApiConfig.cs" />
     <Compile Include="Applications\ClienteApplication.cs" />
     <Compile Include="Applications\ProdutoApplication.cs" />
+    <Compile Include="Applications\VendaApplication.cs" />
     <Compile Include="Model\Cliente.cs" />
     <Compile Include="Model\Endereco.cs" />
     <Compile Include="Model\EnderecoEspecifico.cs" />
