--- a/ProjetoCursoFeriasSMN/ProjetoCursoFeriasSMN.Web.csproj
+++ b/ProjetoCursoFeriasSMN/ProjetoCursoFeriasSMN.Web.csproj
@@ -127,6 +127,8 @@
     <Content Include="Lib\Images\smnwallpaper.png" />
     <Content Include="Lib\Javascript\Inicializacoes.js" />
     <Content Include="Lib\Javascript\materialize.min.js" />
+    <Content Include="Scripts\jquery.unobtrusive-ajax.js" />
+    <Content Include="Scripts\jquery.unobtrusive-ajax.min.js" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
@@ -186,7 +188,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Views\Base\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ProjetoCursoFeriasSMN.Web.Application\ProjetoCursoFeriasSMN.Web.Application.csproj">
