master - Corrigindo listagem e inserção na API de cliente

--- a/Source/ProjetoCursoFeriasSMN.Web.Api/Web.config
+++ b/Source/ProjetoCursoFeriasSMN.Web.Api/Web.config
@@ -5,8 +5,7 @@
   -->
 <configuration>
   <connectionStrings>
-    <add name="Nome da connection string"
-         connectionString="server=192.168.7.12;Database=nome do banco;user id=login;password=senha"
+    <add name="connectionString" connectionString="Data Source=LUCAS_FER-PC\SQLEXPRESS;Initial Catalog=CursoFerias;Integrated Security=True;" 
          providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings></appSettings>
